Insert footer information

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         <button id="copy-2">Copiar senha</button>
       </div>
     </main>
+    <footer>
+      <p class="footer-text">Criado por Matheus Pontes - 2023</p></footer>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
